--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,19 @@
             "tsConfig": "projects/mylibrary/tsconfig.spec.json",
             "karmaConfig": "projects/mylibrary/karma.conf.js"
           }
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "browserTarget": "angular-cli:build",
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "browserTarget": "angular-cli:build"
+          }
         }
       }
     }
